tests/ui/issues/issue-50571.stderr
error[E0642]: patterns aren't allowed in methods without bodies
  --> $DIR/issue-50571.rs:6:12
   |
LL |     fn foo([a, b]: [i32; 2]) {}
   |            ^^^^^^
   |
help: give this argument a name or use an underscore to ignore it
   |
LL -     fn foo([a, b]: [i32; 2]) {}
LL +     fn foo(_: [i32; 2]) {}
   |

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0642`.
